ft/src/tui/snapshots/ft__tui__tests__help_overlay_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ help ────────────────────────────────────────┐                
                │Keybindings                                   │                
         ██╗    │                                              │██████╗         
         ██║    │  q / Ctrl+C        quit                      │█╔════╝         
         ██║ █╗ │  ?                 toggle this help          │████╗           
         ██║███╗│  Tab / Shift+Tab   next / previous tab       │█╔══╝           
         ╚███╔██│  1 / 2             jump to tab N             │██████╗         
          ╚══╝╚═│  Esc               close overlay             │══════╝         
                │                                              │                
                │  press ? or Esc to close                     │                
                │                                              │                
               p│                                              │p               
                │                                              │                
                └──────────────────────────────────────────────┘                
                                                                                
                                                                                
                                                                                
                                                                                
 vault: test-vault  ·  tab: Welcome         not yet refreshed        mode: help
