ft/src/tui/snapshots/ft__tui__tests__help_overlay_over_tasks_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 712
expression: frame
---
  1 Welcome  │  2 Tasks                                                         
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│               ┌ help ────────────────────────────────────────┐ by due, priori│
│ Sun 10 May    │Keybindings                                   │───────────────┘
│ 14:32:05      │                                              │───────────────┐
│               │  q / Ctrl+C        quit                      │               │
│ ── views ──   │  ?                 toggle this help          │8              │
│ ▶ Search      │  Tab / Shift+Tab   next / previous tab       │9              │
│               │  1 / 2             jump to tab N             │               │
│               │  /                 edit query                │0              │
│               │  ↑ / ↓ · j / k     select task               │2 ⏳  2026-05-11│
│               │  ] / [             due date +1d / -1d        │5              │
│               │  } / {             scheduled +1d / -1d       │               │
│               │  t                 set due to today          │               │
│               │  p / P             priority cycle fwd / back │               │
│               │  x / X             complete / cancel         │               │
│               │  e                 open edit popup           │               │
│               │  Enter             open task in $EDITOR      │               │
│               │  R                 reload vault              │               │
│               │  Ctrl+W / Ctrl+⌫   delete previous word      │               │
│               │  Esc               close overlay             │               │
│               └──────────────────────────────────────────────┘               │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]        mode: help
