ft/src/tui/snapshots/ft__tui__tests__notes_move_source_picker_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 2212
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes                                             
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ move · 1/4 source ───────────────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││project│                                    ││               │
│  ?     show th│└────────────────────────────────────────────┘│               │
│  Esc   close o│┌ results ───────────────────────────────────┐│               │
│               ││▶ project.md                                ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │      Enter use source   Esc cancel move      │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
