ft/src/tui/snapshots/ft__tui__tests__quickline_parse_error_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks                                                         
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││not done and due before 2026-05-18 sort by due, priori│
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ new task ────────────────────────────────────────────┐
│                      ││draft due:not-a-date│                                 │
│ ── views ──          │└──────────────────────────────────────────────────────┘
│ ▶ Search             │  ⚠ due: could not parse `not-a-date` as a date (try YYY
│                      │┌ tasks ───────────────────────────────────────────────┐
│                      ││                   no matching tasks                  │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
