ft/src/tui/snapshots/ft__tui__tests__quickline_valid_preview_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks                                                         
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││not done and due before 2026-05-18 sort by due, priori│
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ new task ────────────────────────────────────────────┐
│                      ││buy milk due:tomorrow pri:high #grocery│              │
│ ── views ──          │└──────────────────────────────────────────────────────┘
│ ▶ Search             │  → - [ ] buy milk #grocery ⏫  📅  2026-05-11   → Daily/2
│                      │┌ tasks ───────────────────────────────────────────────┐
│                      ││                   no matching tasks                  │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
