ft/src/tui/snapshots/ft__tui__tests__tasks_placeholder_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks                                                         
┌──────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                     Tasks                                    │
│                                                                              │
│           (coming next session — sidebar, Search view, quick keys)           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks           not yet refreshed      mode: normal
